--- a/readme.adoc
+++ b/readme.adoc
@@ -15,3 +15,8 @@ Just enter the Neo4j-URL in the box on the right side.
 
 [NOTE]
 I wrote most of it while flying from OSCON @ Portland,OR to Chicago on my way home to Dresden, Germany.
+- Michael Hunger
+
+[NOTE]
+Use the Neo1x branch for Neo4J 1.x compatibility.
+- Jeremy Branhm
